--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,11 @@ android {
         testInstrumentationRunner "com.cba.transactions.HiltTestRunner"
     }
 
+    testOptions {
+        animationsDisabled = true
+    }
+
+
     buildTypes {
         release {
             minifyEnabled false
@@ -126,7 +131,7 @@ dependencies {
 
     // Local Unit Tests
     implementation "androidx.test:core:1.2.0"
-    testImplementation "junit:junit:4.13"
+    testImplementation "junit:junit:4.13.2"
     testImplementation "org.hamcrest:hamcrest-all:1.3"
     testImplementation "androidx.arch.core:core-testing:2.1.0"
     testImplementation "org.robolectric:robolectric:4.3.1"
@@ -135,14 +140,14 @@ dependencies {
     testImplementation "org.mockito:mockito-core:2.21.0"
 
     // Instrumented Unit Tests
-    //androidTestImplementation "junit:junit:4.13"
-    //androidTestImplementation "com.linkedin.dexmaker:dexmaker-mockito:2.12.1"
+    //androidTestImplementation "junit:junit:4.13.2"
+    androidTestImplementation "com.linkedin.dexmaker:dexmaker-mockito:2.28.1"
     androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.2.1"
     androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
     androidTestImplementation "com.google.truth:truth:1.0.1"
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    androidTestImplementation "org.mockito:mockito-core:2.21.0"
+    androidTestImplementation "org.mockito:mockito-core:3.3.3"
     androidTestImplementation 'com.google.dagger:hilt-android-testing:2.28-alpha'
     kaptAndroidTest 'com.google.dagger:hilt-android-compiler:2.28-alpha'
     debugImplementation "androidx.fragment:fragment-testing:1.3.0-alpha08"
